HDL ANT Deployment Package/retrieveUnpackaged/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Advance_Testing__c</fullName>
        <inlineHelpText>Do you currently perform advanced testing for cardiac disease, diabetes, metabolic syndrome or fatty liver disease?</inlineHelpText>
        <label>Advance Testing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_method_of_contact__c</fullName>
        <label>Best method of contact</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blood_draw_location_if_offsite__c</fullName>
        <label>Blood draw location if offsite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Lab__c</fullName>
        <inlineHelpText>What lab are you currently sending samples to?</inlineHelpText>
        <label>Current Lab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Process_Notes__c</fullName>
        <inlineHelpText>How are things going with your current process?</inlineHelpText>
        <label>Current Process Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_they_use_an_HRA__c</fullName>
        <label>Do they use an HRA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draw_sites__c</fullName>
        <label>Draw sites?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Wellness_Programs__c</fullName>
        <label>Existing Wellness Programs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_per_week__c</fullName>
        <label>If yes, how many per week?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentives_details__c</fullName>
        <label>Incentives details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incentives_for_participation__c</fullName>
        <label>Incentives for participation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Major_population_health_concerns__c</fullName>
        <label>Major population health concerns?</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metabolic syndrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Motivation_for_Wellness__c</fullName>
        <label>Motivation for Wellness?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Physicians_in_Practice__c</fullName>
        <label>Number of Physicians in Practice</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Manager_Name__c</fullName>
        <label>Office Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Manager_Phone__c</fullName>
        <label>Office Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>On_the_BHL_Do_Not_Call_List__c</fullName>
        <label>On the BHL Do Not Call List?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Claims_Info__c</fullName>
        <inlineHelpText>Do they have past claims info from their previous wellness program?</inlineHelpText>
        <label>Past Claims Info?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phlebotomy_Location__c</fullName>
        <label>Phlebotomy Location</label>
        <picklist>
            <picklistValues>
                <fullName>In Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physician_on_Staff__c</fullName>
        <label>Physician on Staff?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Annual_Revenue__c</fullName>
        <inlineHelpText>How much revenue do you expect to get from this qualified lead?</inlineHelpText>
        <label>Potential Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pratice_type__c</fullName>
        <label>Pratice type</label>
        <picklist>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private_practice_or_hospital_owned__c</fullName>
        <label>Private practice or hospital owned?</label>
        <picklist>
            <picklistValues>
                <fullName>Private Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Owned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Patient_Address__c</fullName>
        <label>Referring Patient Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Patient_City__c</fullName>
        <label>Referring Patient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Patient_Name__c</fullName>
        <label>Referring Patient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Patient_Phone__c</fullName>
        <label>Referring Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referring_Patient_State__c</fullName>
        <label>Referring Patient State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Patient_ZIP__c</fullName>
        <label>Referring Patient ZIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_to_Contact__c</fullName>
        <inlineHelpText>How soon would you like one of our sales reps to contact you?</inlineHelpText>
        <label>Sales Rep to Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Lead_Type__c</fullName>
        <label>Web Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_draws_blood__c</fullName>
        <label>Who draws blood?</label>
        <picklist>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <description>Used for Practice Leads</description>
        <label>Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Initiatives</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <description>Used for Standard Strategic Initiatives Leads</description>
        <label>Strategic Initiatives</label>
    </recordTypes>
    <validationRules>
        <fullName>Blood_Draw_Location_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Phlebotomy_Location__c, &quot;Offsite&quot;), ISBLANK(  Blood_draw_location_if_offsite__c))</errorConditionFormula>
        <errorDisplayField>Blood_draw_location_if_offsite__c</errorDisplayField>
        <errorMessage>Because Phlebotomy Location = Offsite, this data is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_yes_how_many_per_week_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(  Advance_Testing__c , &quot;Yes&quot;), ISBLANK(   If_yes_how_many_per_week__c ))</errorConditionFormula>
        <errorDisplayField>If_yes_how_many_per_week__c</errorDisplayField>
        <errorMessage>Because Advance Testting? is Yes, this data is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incentives_Details_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Incentives_for_participation__c, &quot;Yes&quot;), ISBLANK(Incentives_details__c))</errorConditionFormula>
        <errorDisplayField>Incentives_details__c</errorDisplayField>
        <errorMessage>Please identify the Incentive Program details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Who_draws_blood_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Phlebotomy_Location__c, &quot;In Office&quot;), ISPICKVAL( Who_draws_blood__c , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Who_draws_blood__c</errorDisplayField>
        <errorMessage>Because Phlebotomy Location = In House, this data is required</errorMessage>
    </validationRules>
</CustomObject>